[tool.poetry]
name = "holamundo"
version = "0.1.0"
description = "Hola Mundo! con PySide6"
authors = ["Victor Lorente"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
pyside6 = "^6.8.2.1"


[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.2.0", python = "^3.9"}
sphinx-autoapi = "^3.6.0"
sphinx-rtd-theme = "^3.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
holamundo = "holamundo.holamundo:main"
